--- a/vue-project1/index.html
+++ b/vue-project1/index.html
@@ -18,8 +18,9 @@
     </header>
     <section id="user-goal">
       <h2>My Course Goal</h2>
+      <!-- <p v-html="htmlCode"></p> -->
       <p>{{ outputGoal() }}</p>
-      <p>Learn more <a v-bind:href="vueLink">about Vue</a>.</p>
+      <p>Learn more <a v-bind:href="vueLink" target="_blank">about Vue</a>.</p>
     </section>
   </body>
 </html>
