--- a/vue-test3/index.html
+++ b/vue-test3/index.html
@@ -19,12 +19,30 @@
     <section id="events">
       <h2>Events in Action</h2>
       <button v-on:click="add(10)">Add 10</button>
-      <button v-on:click="reduce(5)">Reduce 5</button>
+      <button v-on:click.right="reduce(5)">Reduce 5</button>
       <p>Result: {{ counter }}</p>
       <!-- <input type="text" v-on:input="setName"> -->
       <!-- 인자가 있을 경우 event인자를 $event로 받을 수 있다. -->
-      <input type="text" v-on:input="setName($event, '입니다.')">
-      <p>Your Name: {{ name }}</p>
+      <input
+        type="text"
+        v-on:input="setName($event, '입니다.')"
+        v-on:keydown.enter="confirmInput"
+      />
+      <p>Your Name: {{ confirmName }}</p>
+
+      <!-- 브라우저가 초기화되지 않는 방법 1 -->
+      <!-- 
+        <form v-on:submit="submitForm">
+          <input type="text">
+          <button>Sign Up</button>
+        </form>
+      -->
+
+      <!-- 브라우저가 초기화되지 않는 방법 2(이벤트 수식어) -->
+      <form v-on:submit.prevent="submitForm">
+        <input type="text" />
+        <button>Sign Up</button>
+      </form>
     </section>
   </body>
 </html>
