--- a/vue-test3/index.html
+++ b/vue-test3/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <script src="https://unpkg.com/vue@next" defer></script>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js" defer></script>
     <script src="app.js" defer></script>
   </head>
   <body>
@@ -20,6 +20,7 @@
       <h2>Events in Action</h2>
       <button v-on:click="add(10)">Add 10</button>
       <button v-on:click.right="reduce(5)">Reduce 5</button>
+      <p v-once>start: {{ counter }}</p>
       <p>Result: {{ counter }}</p>
       <!-- <input type="text" v-on:input="setName"> -->
       <!-- 인자가 있을 경우 event인자를 $event로 받을 수 있다. -->
