--- a/vue-project1/index.html
+++ b/vue-project1/index.html
@@ -29,10 +29,17 @@
           <div class="healthbar__value" :style="playerHealthBar"></div>
         </div>
       </section>
+      <section class="container" v-if="winner">
+        <h2>Game Over!</h2>
+        <h3 v-if="winner === 'player'">You Won!</h3>
+        <h3 v-else-if="winner === 'monster'">You Lost!</h3>
+        <h3 v-else>It's a Draw</h3>
+        <button @click="startGame">Start New Game</button>
+      </section>
       <section id="controls">
         <button @click="attackMonster">ATTACK</button>
         <button :disabled="specialAttackBtn" @click="specialAttackMonster">SPECIAL ATTACK</button>
-        <button>HEAL</button>
+        <button @click="healPlayer">HEAL</button>
         <button>SURRENDER</button>
       </section>
       <section id="log" class="container">
