surrender / battle log

--- a/vue-project1/index.html
+++ b/vue-project1/index.html
@@ -36,15 +36,21 @@
         <h3 v-else>It's a Draw</h3>
         <button @click="startGame">Start New Game</button>
       </section>
-      <section id="controls">
+      <section id="controls" v-else>
         <button @click="attackMonster">ATTACK</button>
         <button :disabled="specialAttackBtn" @click="specialAttackMonster">SPECIAL ATTACK</button>
         <button @click="healPlayer">HEAL</button>
-        <button>SURRENDER</button>
+        <button @click="surrender">SURRENDER</button>
       </section>
       <section id="log" class="container">
         <h2>Battle Log</h2>
-        <ul></ul>
+        <ul>
+          <li class="container" v-for="log in logMsg">
+            <span :class="{'log--player': log.actionBy === 'player', 'log--monster': log.actionBy === 'monster'}">{{ log.actionBy === 'player' ? 'Player' : 'Monster' }}</span>
+            <span v-if="log.actionType === 'heal'"> Heal: <span class="log--heal">{{ log.actionValue }}</span></span>
+            <span v-else> Attack: <span class="log--damage">{{ log.actionValue }}</span></span>
+          </li>
+        </ul>
       </section>
     </div>
   </body>
