--- a/vue-test10/index.html
+++ b/vue-test10/index.html
@@ -18,22 +18,10 @@
     </header>
     <section id="app">
       <ul>
-        <li>
-          <h2>Manuel Lorenz</h2>
-          <button>Show Details</button>
-          <ul>
-            <li><strong>Phone:</strong> 01234 5678 991</li>
-            <li><strong>Email:</strong> manuel@localhost.com</li>
-          </ul>
-        </li>
-        <li>
-          <h2>Julie Jones</h2>
-          <button>Show Details</button>
-          <ul>
-            <li><strong>Phone:</strong> 09876 543 221</li>
-            <li><strong>Email:</strong> julie@localhost.com</li>
-          </ul>
-        </li>
+        <!-- v-for를 사용해서 친구 목록을 나열할 수 있지만 button의 event는 한 곳만 눌러도 모두 event가 적용된다. -->
+        <!-- component를 사용하여 event 문제를 해결할 수 있다. -->
+        <friend-contact></friend-contact>
+        <friend-contact></friend-contact>
       </ul>
     </section>
   </body>
